--- a/www/ciudades.html
+++ b/www/ciudades.html
@@ -12,20 +12,11 @@
     		<h1 class="logo">
                 <img src="img/logo.png"/>
             </h1>
-            <p class="text">elige tu ciudad</p>
+            <p class="text">&nbsp;</p>
     	</div><!-- /header -->
         
     	<div data-role="content">
             <div class="owl-carousel">
-                <div class="ciudad" style="background: url('img/ciudades/2-ciudad.jpg');background-size: 100%;">
-                    <a href="#">ibiza</a>
-                </div>
-                <div class="ciudad">
-                    <a href="#">barcelona</a>
-                </div>
-                <div class="ciudad">
-                    <a href="#">madrid</a>
-                </div>
             </div>
     	</div><!-- /content -->
         
