--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
         <script src="js/jquery-1.11.0.js"></script>
         <script type="text/javascript">
             $(document).bind("mobileinit", function () {
-                $.mobile.defaultPageTransition = 'none';
+                $.mobile.defaultPageTransition = 'slide';
             });
         </script>
 		<script src="js/jquery.mobile-1.4.2.js"></script>
