--- a/www/dj_descripcion.html
+++ b/www/dj_descripcion.html
@@ -17,7 +17,7 @@
                     <h2>djs</h2>
                 </li>
                 <li class="setting">
-                    <a class="menu" href="#" data-role="button">menu</a>
+                    <a class="menu" href="menu.html" data-role="button">menu</a>
                 </li>
             </ul>
     	</div><!-- /header -->
