--- a/www/pubs.html
+++ b/www/pubs.html
@@ -17,27 +17,13 @@
                     <h2>pubs</h2>
                 </li>
                 <li class="setting">
-                    <a class="menu" href="#" data-role="button">menu</a>
+                    <a class="menu" href="menu.html" data-role="button">menu</a>
                 </li>
             </ul>
     	</div><!-- /header -->
     
     	<div data-role="content">
             <div class="content_options lista">
-                <a class="custom pub1" href="pub_descripcion.html" data-role="button" data-icon="none">
-                    <span class="bg">
-                        <span class="title">blue marlin</span>
-                        <span class="subtitle">mojitos 2x1</span>
-                        <span class="km">300m</span>
-                    </span>
-                </a>
-                <a class="custom pub1" href="pub_descripcion.html" data-role="button" data-icon="none">
-                    <span class="bg">
-                        <span class="title">blue marlin</span>
-                        <span class="subtitle">mojitos 2x1</span>
-                        <span class="km">300m</span>
-                    </span>
-                </a>
             </div>
     	</div><!-- /content -->
     
