--- a/www/sesiones.html
+++ b/www/sesiones.html
@@ -17,33 +17,13 @@
                     <h2>sesiones</h2>
                 </li>
                 <li class="setting">
-                    <a class="menu" href="#" data-role="button">menu</a>
+                    <a class="menu" href="menu.html" data-role="button">menu</a>
                 </li>
             </ul>
     	</div><!-- /header -->
     
     	<div data-role="content">
             <ul class="ui-listview">
-                <li>
-                    <h2>lunes enter space</h2>
-                    <a href="sesion_descripcion.html"><img src="img/sesiones/img1.jpg"/></a>
-                </li>
-                <li>
-                    <h2>lunes enter space</h2>
-                    <a href="sesion_descripcion.html"><img src="img/sesiones/img1.jpg"/></a>
-                </li>
-                <li>
-                    <h2>lunes enter space</h2>
-                    <a href="sesion_descripcion.html"><img src="img/sesiones/img1.jpg"/></a>
-                </li>
-                <li>
-                    <h2>lunes enter space</h2>
-                    <a href="sesion_descripcion.html"><img src="img/sesiones/img1.jpg"/></a>
-                </li>
-                <li>
-                    <h2>lunes enter space</h2>
-                    <a href="sesion_descripcion.html"><img src="img/sesiones/img1.jpg"/></a>
-                </li>
             </ul>
     	</div><!-- /content -->
     
