--- a/www/menu.html
+++ b/www/menu.html
@@ -35,7 +35,7 @@
                 <a class="icon_dj" href="djs.html" data-role="button" data-icon="none" data-iconpos="top">Djs</a>
                 
                 <a class="icon_tickets" href="#" data-role="button" data-icon="none" data-iconpos="top">Tickets</a>
-                <a class="icon_calendario" href="#" data-role="button" data-icon="none" data-iconpos="top">Calendario</a>
+                <a class="icon_calendario" href="calendario.html" data-role="button" data-icon="none" data-iconpos="top">Calendario</a>
                 <a class="icon_alertas" href="#" data-role="button" data-icon="none" data-iconpos="top">Alertas</a>
                 
                 <a class="icon_ciudades" href="ciudades.html" data-role="button" data-icon="none" data-iconpos="top">Ciudades</a>
