--- a/www/calendario.html
+++ b/www/calendario.html
@@ -24,7 +24,10 @@
     
     	<div data-role="content">
             <div class="contenedor_calendario">
-                <input type="text" data-role="date" data-inline="true" id="input_calendario"/>
+                <input type="text" data-role="date" data-inline="true" class="datepicker"/>
+            </div>
+            <!-- resultados -->
+            <div id="tickets" class="content_options lista">
             </div>
     	</div><!-- /content -->
     
