--- a/www/menu.html
+++ b/www/menu.html
@@ -28,7 +28,7 @@
             <div data-role="controlgroup" data-type="horizontal" class="custom">
                 <a class="icon_clubs" href="clubs.html" data-role="button" data-icon="none" data-iconpos="top">Clubs</a>
                 <a class="icon_sesiones" href="sesiones.html" data-role="button" data-icon="none" data-iconpos="top">Sesiones</a>
-                <a class="icon_pubs" href="pubs.html" data-role="button" data-icon="none" data-iconpos="top">Pubs</a>
+                <a class="icon_pubs" href="pubs.html" data-role="button" data-icon="none" data-iconpos="top">Life</a>
                 
                 <a class="icon_beach" href="beachclubs.html" data-role="button" data-icon="none" data-iconpos="top">BeachC.</a>
                 <a class="icon_festivales" href="festivales.html" data-role="button" data-icon="none" data-iconpos="top">Festivales</a>
