--- a/www/google_map.html
+++ b/www/google_map.html
@@ -14,10 +14,10 @@
                     <a class="volver" href="#" data-role="button" data-rel="back">Volver</a>
                 </li>
                 <li class="page">
-                    <img src="img/logo.png"/>
+                    <h2>&nbsp;</h2>
                 </li>
-                <li class="alerta">
-                    <a href="setting.html" data-role="button" data-iconpos="notext">Setting</a>
+                <li class="setting">
+                    <a class="menu" href="menu.html" data-role="button">menu</a>
                 </li>
             </ul>
     	</div><!-- /header -->
