--- a/www/promocion_descripcion.html
+++ b/www/promocion_descripcion.html
@@ -14,7 +14,7 @@
                     <a class="volver" href="#" data-role="button" data-rel="back">Volver</a>
                 </li>
                 <li class="page">
-                    <h2>promociones</h2>
+                    <h2>&nbsp;</h2>
                 </li>
                 <li class="setting">
                     <a class="menu" href="menu.html" data-role="button">menu</a>
@@ -22,43 +22,9 @@
             </ul>
     	</div><!-- /header -->
     
-    	<div data-role="content">
-            <div class="container custom2" style="background: url('img/promociones/fondo1.jpg');background-size: 100% 100%;">
-                <div class="content_top">
-                    <div class="imagen left">
-                        <img src="img/festivales/imagen.png" />
-                    </div>
-                    <div class="title left">
-                        <a class="sub" href="#">
-                            <h2>Blue Marlin</h2>
-                            paella gratis
-                        </a>
-                    </div>
-                </div>
-                <div class="content_middle">
-                    <p class="descripcion">
-                        Privilege is a true experience and a unique place on earth. It is the world's largest nightclub - intakes your breath away when you enter the venue. The 25 metres-high ceiling allows to present spectacular shows and gives enough space to house a huge pool inside. It's situated between Ibiza Town and San spectacular shows and gives enough space to house a huge pool inside.
-                    </p>
-                    <div class="mas_informacion">
-                        <p class="direccion">
-                            <b>dirección:</b>
-                            <span>calle de los pirineos 4 (playa dmbosa)</span>
-                        </p>
-                        <p class="telefono">
-                            <b>teléfono:</b>
-                            <span>919 989 989 - 678678678</span>
-                        </p>
-                    </div>                    
-                </div>
-                <div class="content_bottom">
-                    <div data-role="navbar" data-corners="false">
-                        <ul class="nav_options">
-                            <li class="mapa"><a class="icon_mapa" href="google_map.html?latitud=40.714594&longitud=-3.989803" data-icon="none" data-iconpos="top">4km</a></li>
-                            <li class="alertas"><a class="icon_alertas" href="#" data-icon="none" data-iconpos="top">Alerta</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+    	<div data-role="content" class="slider">
+            <div class="owl-carousel">
+            </div>        
     	</div><!-- /content -->
     
     	<div data-role="footer" data-tap-toggle="false" data-position="fixed">
