--- a/www/sesion_descripcion.html
+++ b/www/sesion_descripcion.html
@@ -14,7 +14,7 @@
                     <a class="volver" href="#" data-role="button" data-rel="back">Volver</a>
                 </li>
                 <li class="page">
-                    <h2>sesiones</h2>
+                    <h2>&nbsp;</h2>
                 </li>
                 <li class="setting">
                     <a class="menu" href="menu.html" data-role="button">menu</a>
@@ -22,7 +22,7 @@
             </ul>
     	</div><!-- /header -->
     
-    	<div data-role="content">
+    	<div data-role="content" class="slider">
             <div class="owl-carousel">
             </div>
     	</div><!-- /content -->
