--- a/www/club_descripcion.html
+++ b/www/club_descripcion.html
@@ -14,7 +14,7 @@
                     <a class="volver" href="#" data-role="button" data-rel="back">Volver</a>
                 </li>
                 <li class="page">
-                    <h2>clubs</h2>
+                    <h2>&nbsp;</h2>
                 </li>
                 <li class="setting">
                     <a class="menu" href="menu.html" data-role="button">menu</a>
