--- a/www/dj_descripcion.html
+++ b/www/dj_descripcion.html
@@ -14,7 +14,7 @@
                     <a class="volver" href="#" data-role="button" data-rel="back">Volver</a>
                 </li>
                 <li class="page">
-                    <h2>djs</h2>
+                    <h2>&nbsp;</h2>
                 </li>
                 <li class="setting">
                     <a class="menu" href="menu.html" data-role="button">menu</a>
@@ -22,31 +22,8 @@
             </ul>
     	</div><!-- /header -->
     
-    	<div data-role="content">
-            <div class="container custom2" style="background: url('img/djs/fondo1.jpg');background-size: 100% 100%;">
-                <div class="content_top">
-                    <div class="imagen left">
-                        <img src="img/djs/imagen.png" />
-                    </div>
-                    <div class="title left">
-                        <a href="#">
-                            <h2>Carl Cox</h2>
-                        </a>
-                    </div>
-                </div>
-                <div class="content_middle">
-                    <p class="descripcion">
-                        Privilege is a true experience and a unique place on earth. It is the world's largest nightclub - intakes your breath away when you enter the venue. The 25 metres-high ceiling allows to present spectacular shows and gives enough space to house a huge pool inside. It's situated between Ibiza Town and San spectacular shows and gives enough space to house a huge pool inside. It's situated between Ibiza Town and Sanspectacular shows and gives enough space to house a huge pool inside.
-                    </p>
-                </div>
-                <div class="content_bottom">
-                    <div data-role="navbar" data-corners="false">
-                        <ul class="nav_options">
-                            <li class="tickets"><a class="icon_tickets" href="#" data-icon="none" data-iconpos="top">Tickets</a></li>
-                            <li class="alertas"><a class="icon_alertas" href="#" data-icon="none" data-iconpos="top">Alerta</a></li>
-                        </ul>
-                    </div>
-                </div>
+    	<div data-role="content" class="slider">
+            <div class="owl-carousel">
             </div>
     	</div><!-- /content -->
     
