cambios en comprar

--- a/www/ticket_descripcion.html
+++ b/www/ticket_descripcion.html
@@ -52,7 +52,7 @@
                                 </div>
                             </div>
                             <div class="comprar clear">
-                                <a id="realizar_compra" href="javascript:void(0)">compra</a>
+                                <a id="realizar_compra" href="javascript:void(0)">comprar</a>
                             </div>
                         </div>
                     </div>
