--- a/www/calendario.html
+++ b/www/calendario.html
@@ -24,7 +24,7 @@
     
     	<div data-role="content">
             <div class="contenedor_calendario">
-                <input type="text" data-role="date" data-inline="true" class="datepicker"/>
+                <input type="text" data-role="date" data-inline="true"/>
             </div>
             <!-- resultados -->
             <div id="tickets" class="content_options lista">
