--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
         <link href="css/owl.theme.css" rel="stylesheet"/>
     	
         <script src="js/jquery-1.11.0.js"></script>
+        <script src="js/jquery.nicescroll.js"></script>
         <script type="text/javascript">
             $(document).bind("mobileinit", function () {
                 $.mobile.defaultPageTransition = 'slide';
