--- a/www/ticket_descripcion.html
+++ b/www/ticket_descripcion.html
@@ -29,7 +29,7 @@
                         <img src="img/festivales/imagen.png" />
                     </div>
                     <div class="right descripcion">
-                        <h2>Sesion</h2>
+                        <h2>Sesi&oacute;n</h2>
                         <div class="sesion">
                             <h3>enter space</h3>
                             <span class="fecha">25-08-14</span>
@@ -37,6 +37,7 @@
                             <span class="precio">45&euro;</span>
                         </div>
                         <div class="resultado">
+                            <!--
                             <div class="operaciones">
                                 <div class="bg_redondo left">
                                     <span class="numero">1</span>
@@ -54,6 +55,8 @@
                             <div class="comprar clear">
                                 <a id="realizar_compra" href="javascript:void(0)">comprar</a>
                             </div>
+                            --->
+                            <p>Pr&oacute;ximamente venta de tickets disponible. Estamos actualizando las sesiones</p>
                         </div>
                     </div>
                 </div>
