--- a/www/menu.html
+++ b/www/menu.html
@@ -35,7 +35,7 @@
                 
                 <a class="icon11 icon_tickets" href="#" data-role="button" data-icon="none" data-iconpos="top">Tickets</a>
                 <a class="icon12 icon_calendario" href="calendario.html" data-role="button" data-icon="none" data-iconpos="top">Calendario</a>
-                <a class="icon13 icon_alertas" href="#" data-role="button" data-icon="none" data-iconpos="top">Alertas</a>
+                <a class="icon13 icon_alertas" href="alertas.html" data-role="button" data-icon="none" data-iconpos="top">Alertas</a>
                 
                 <a class="icon14 icon_ciudades" href="ciudades.html" data-role="button" data-icon="none" data-iconpos="top">Ciudades</a>
                 <a class="icon15 icon_idioma" href="index.html" data-role="button" data-icon="none" data-iconpos="top">Idioma</a>
