--- a/www/alertas.html
+++ b/www/alertas.html
@@ -30,13 +30,10 @@
     	<div data-role="footer" data-tap-toggle="false" data-position="fixed">
            <div data-role="navbar" data-corners="false">
                 <ul class="nav-custom clubs">
-                    <li><a href="#3" class="f1" data-icon="none" data-iconpos="top">Clubs</a></li>
-                    <li><a href="#1" class="f2" data-icon="none" data-iconpos="top">Sesiones</a></li>
-                    <li><a href="#3" class="f3" data-icon="none" data-iconpos="top">Life</a></li>
-                    <li><a href="#1" class="f4" data-icon="none" data-iconpos="top">BeachC.</a></li>
-                    <li><a href="#1" class="f4" data-icon="none" data-iconpos="top">Festivales</a></li>
-                    <li><a href="#1" class="f4" data-icon="none" data-iconpos="top">Djs</a></li>
-                    <li><a href="#1" class="f4" data-icon="none" data-iconpos="top">Promos</a></li>
+                    <li><a href="#3" class="f1" data-icon="none" data-iconpos="top">amnesia</a></li>
+                    <li><a href="#1" class="f2" data-icon="none" data-iconpos="top">pacha</a></li>
+                    <li><a href="#3" class="f3" data-icon="none" data-iconpos="top">privilege</a></li>
+                    <li><a href="#1" class="f4" data-icon="none" data-iconpos="top">space</a></li>
                 </ul>
             </div>
     	</div><!-- /footer -->
