--- a/www/menu.html
+++ b/www/menu.html
@@ -33,7 +33,7 @@
                 <a class="icon9 icon_festivales" href="festivales.html" data-role="button" data-icon="none" data-iconpos="top">Festivales</a>
                 <a class="icon10 icon_dj" href="djs.html" data-role="button" data-icon="none" data-iconpos="top">Djs</a>
                 
-                <a class="icon11 icon_tickets" href="#" data-role="button" data-icon="none" data-iconpos="top">Tickets</a>
+                <a class="icon11 icon_tickets" href="calendario.html" data-role="button" data-icon="none" data-iconpos="top">Tickets</a>
                 <a class="icon12 icon_calendario" href="calendario.html" data-role="button" data-icon="none" data-iconpos="top">Calendario</a>
                 <a class="icon13 icon_alertas" href="alertas.html" data-role="button" data-icon="none" data-iconpos="top">Alertas</a>
                 
