--- a/www/alertas.html
+++ b/www/alertas.html
@@ -23,8 +23,8 @@
     	</div><!-- /header -->
     
     	<div data-role="content">
-            <ul class="ui-listview">
-            </ul>
+            <div class="content_options lista" style="padding-bottom: 65px;">
+            </div>
     	</div><!-- /content -->
     
     	<div data-role="footer" data-tap-toggle="false" data-position="fixed">
