--- a/www/ticket_descripcion.html
+++ b/www/ticket_descripcion.html
@@ -23,7 +23,7 @@
     	</div><!-- /header -->
     
     	<div data-role="content">
-            <div class="container custom">
+            <div class="container custom no_height">
                 <div class="content_middle ticket_detalle">
                     <div class="imagen left">
                         <img src="img/festivales/imagen.png" />
