--- a/www/ticket_descripcion.html
+++ b/www/ticket_descripcion.html
@@ -52,11 +52,13 @@
                                     <span>euros</span>
                                 </div>
                             </div>
+                            -->
                             <div class="comprar clear">
-                                <a id="realizar_compra" href="javascript:void(0)">comprar</a>
+                                <a id="realizar_compra" href="#">comprar</a>
                             </div>
-                            --->
+                            <!--
                             <p>Pr&oacute;ximamente venta de tickets disponible. Estamos actualizando las sesiones</p>
+                            -->
                         </div>
                     </div>
                 </div>
