--- a/www/venta_ticket.html
+++ b/www/venta_ticket.html
@@ -22,8 +22,10 @@
             </ul>
     	</div><!-- /header -->
     
-    	<div data-role="content" style="margin-top: -8px;">
-            <iframe style="width: 100%;" width="100%" height="385" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.ibizadiscoticket.com/?c=promoters&a=details&id=1&club=7&partner=100"></iframe>
+    	<div data-role="content">
+            <div class="content_iframe" style="width: 100%;">
+                <iframe style="width: 100%;" width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src=""></iframe>
+            </div>
     	</div><!-- /content -->
     </div><!-- /page -->    
     
