--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
 		<script src="js/jquery.mobile-1.4.2.js"></script>
         <script src="js/jquery.ui.datepicker.js"></script>
         <script src="js/jquery.mobile.datepicker.js"></script>
+        <script src="js/jquery.endless-scroll.js"></script>
         
         <!-- include slider.js -->
         <script src="js/owl.carousel.min.js"></script>
