--- a/www/venta_ticket.html
+++ b/www/venta_ticket.html
@@ -23,9 +23,9 @@
     	</div><!-- /header -->
     
     	<div data-role="content">
-            <div class="content_iframe" style="width: 100%;">
-                <iframe style="width: 100%;" width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src=""></iframe>
-            </div>
+            <div class="wrap">
+                <iframe class="frame" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src=""></iframe>
+            </div>            
     	</div><!-- /content -->
     </div><!-- /page -->    
     
