--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
 		
         <script src="cordova.js"></script>
         <script src="PushNotification.js"></script>
+        <script src="childbrowser.js"></script>
         
 		<!-- include googleapis-->
         <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBvLnXtnEnR1tea2mEXAYGhOXUgFEfm_Ig&sensor=true"></script>
