--- a/www/ticket_descripcion.html
+++ b/www/ticket_descripcion.html
@@ -54,7 +54,7 @@
                             </div>
                             -->
                             <div class="comprar clear">
-                                <a class="open" id="realizar_compra" href="#">comprar</a>
+                                <a class="open" id="realizar_compra" href="javascript:void(0)">comprar</a>
                             </div>
                             <!--
                             <p>Pr&oacute;ximamente venta de tickets disponible. Estamos actualizando las sesiones</p>
