--- a/www/index.html
+++ b/www/index.html
@@ -46,6 +46,7 @@
         <!-- cargamos al ultimo el script que inicializa los valores una vez cargado el dispositivo -->
         <script type="text/javascript" src="js/app.ready.js"></script>
         <script type="text/javascript">
+            alert("empieza");
             app.initialize();
         </script>
     </head>
